@@ -2,6 +2,7 @@
 - Make file opens use the cloexec flag (Cristian Rodríguez)
 - Add CAP_BLOCK_SUSPEND
 - Fix possible segfaults when CAP_LAST_CAP is larger than the lookup table
+- In pscap, don't drop capabilities when running with capabilities
 
 0.6.6
 - In netcap, make sure readlink is handled properly
